
Wed Dec 19 22:59:52 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_sublen): adjust position if position is not at the
	  head of a character.

	* string.c (rb_str_chomp_bang): check if match start at the head
	  of a character.

	* string.c (rb_str_chomp_bang): wrong adjust condition.

	* string.c (rb_str_rindex): comparison length should be based on
	  bytes, not characters.

Wed Dec 19 21:42:18 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_regsub): should set checked encoding.

	* string.c (rb_str_sub_bang): applied r14212 too.

Wed Dec 19 20:40:01 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bignum.c (bigmul1): C99ism.

	* bignum.c (bigdivrem1): need dummy return value.

Wed Dec 19 19:18:06 2007  NARUSE, Yui <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Updated.

	* ext/nkf/nkf.c (rb_nkf_enc_get): added.
	  (find encoding or replicate default encoding)

	* ext/nkf/nkf.c (NKF::<ENCODING>): redefine encoding constant.

	* ext/nkf/lib/kconv.rb (Kconv::<ENCODING>): redefined as Encoding.

	* ext/nkf/lib/kconv.rb: refactoring.

Wed Dec 19 19:11:08 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_mul0): blocking check for bigger numbers.
	  a patch from Yusuke ENDOH <mame AT tsg.ne.jp> in [ruby-dev:32632].

	* bignum.c (bigdivrem): ditto.

Wed Dec 19 17:34:50 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): remove "retry" in block.
	  ("iter{retry}" cause syntax error)
	  Currently, "begin; ...; rescue; iter{retry}; end" cause
	  syntax error too.

	* bootstraptest/test_jump.rb: ditto.

	* lib/drb/invokemethod.rb: ditto.

	* sample/drb/darrayc.rb: ditto.

	* sample/test.rb: ditto.

	* test/drb/drbtest.rb: ditto.

	* test/ruby/test_iterator.rb: ditto.

	* sample/test.rb: add a 'test' directory on the SYSTEM test.

Wed Dec 19 17:12:59 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb, test_block.rb: 
	  move fixed bug.

	* bootstraptest/test_m17n.rb: added.
