@@ -27,6 +27,14 @@ Wed Dec 19 22:59:52 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
 	* string.c (rb_str_rindex): comparison length should be based on
 	  bytes, not characters.
 
+	* string.c (rb_str_rindex_m): too much adjustment.
+
+	* re.c (reg_match_pos): pos adjustment should be based on
+	  characters.
+
+	* test/ruby/test_m17n.rb (TestM17N::test_str_insert): test updated
+	  to check negative offset behavior.
+
 Wed Dec 19 21:42:18 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* re.c (rb_reg_regsub): should set checked encoding.
